<resources>
    <string name="app_name">MimoniTest</string>

    <!-- Sections TabLayout Strings -->
    <string name="name_personal_fragment">Para ti</string>
    <string name="name_accommodation_fragment">Alojamientos</string>
    <string name="name_experiencies_fragment">Experiencias</string>
    <string name="name_places_fragment">Lugares</string>

    <!-- Profile Fragment Strings -->
    <string name="text_name_user">Braulio Méndez</string>
    <string name="text_edit_profile">Ver y editar perfil</string>

    <!-- Json Strings -->
    <string name="name_accommodation_json">accommodation.json</string>
    <string name="name_experiences_json">experiences.json</string>
    <string name="name_places_json">places.json</string>
    <string name="name_personal_json">personal.json</string>
    <string name="name_profile_json">profile.json</string>

    <!-- layout_main_adapter Strings -->
    <string name="text_view_more">Ver más</string>

    <!-- fragment_message Strings -->
    <string name="text_message">Mensajes</string>
    <string name="text_no_messages">No hay mensajes</string>
    <string name="text_info_messages">Cuando descubras el alojamiento perfecto, escribe al anfitrión: cuéntale un poco sobre ti y el motivo de tu viaje.</string>
    <string name="text_button_explore">Empieza a explorar</string>
    <!-- menu_main Strings -->
    <string name="text_explore">Explorar</string>
    <string name="text_saved">Guardados</string>
    <string name="text_travels">Viajes</string>
    <string name="text_messages">Mensajes</string>
    <string name="text_profile">Perfil</string>
</resources>
