<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_messages"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/message_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_messages"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_jumbo"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/no_messages_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_no_messages"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_larger"/>

        <TextView
            android:id="@+id/info_messages_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_messages_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/text_info_messages"
            android:textAlignment="center"
            android:textSize="@dimen/font_normal"/>

        <Button
            android:id="@+id/explore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_messages_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/text_button_explore"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_normal"/>
    </RelativeLayout>
</RelativeLayout>
